# accounts-pilot

./: .env.example  .gitignore  HANDOFF.md  README.md  SETUP-CODESPACES.md  SETUP.md  pyproject.toml  requirements.txt
.claude/: launch.json
.devcontainer/: Dockerfile  devcontainer.json
accounts_pilot/: __init__.py  cli.py  config.py  photos.py
accounts_pilot/adapters/: __init__.py  agoda.py  airbnb.py  base.py  booking_com.py  booking_selectors.py  expedia.py  makemytrip.py
accounts_pilot/audit/: __init__.py  log.py
accounts_pilot/drivers/: __init__.py  agentql_local.py  (+1 more)
data/: page_maps_agoda.json  page_maps_booking_com.json  page_maps_expedia.json  page_maps_makemytrip.json
docs/: ARCHITECTURE.md  BOOKING-FIELDS.md  CAPTURE-LOG.md  DATA-MODEL.md  DECISIONS.md  PLAN.md  RUNBOOK.md  TINYFISH.md  mis-integration.md
examples/: _smoke_runtime.py  _smoke_tinyfish.py  _tf_auth_check.py  _tf_loginurl.py  _tf_profile_check.py  _tf_setup.py  _tf_setup_probe.py  _tf_view_probe.py  _tinyfish_booking_recon.py  booking_form.json  form_config.example.json  gate_data.example.json  sample_property.json  test_property_full.json
scripts/: _ap_restart.py  codespace-start.sh  convert_tally_export.py  download_photos.py  expedia_smoke.py  gen_photos.py  run-tests.ps1  setup.sh
tests/: conftest.py  test_address_gmp.py  test_airbnb.py  test_booking_rules.py  test_dropdown_match.py  test_expedia.py  test_human.py  test_kyp.py  test_llm_fill.py  test_mis.py  test_multi_ota.py  test_page_maps.py  test_photos.py  test_profile.py  test_simulate.py  test_units.py  test_walker.py
(+35 files in other folders)
