[project]
name = "accounts-pilot"
version = "0.1.0"
description = "Automated OTA property-onboarding service (Booking.com first)."
requires-python = ">=3.11"
dependencies = [
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "playwright>=1.44",
    "httpx>=0.27",
]

[project.scripts]
accounts-pilot = "accounts_pilot.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["accounts_pilot"]
